[gd_scene load_steps=7 format=3 uid="uid://dn3o4ik2vi8l8"]

[ext_resource type="Script" path="res://Script/Rooms/entrance.gd" id="1_xuywx"]
[ext_resource type="Texture2D" uid="uid://3lngvcxsuih4" path="res://sample/Purple.png" id="2_b1pgh"]
[ext_resource type="PackedScene" uid="uid://be0wmp3b3b4qv" path="res://Scene/player.tscn" id="3_vobsi"]
[ext_resource type="PackedScene" uid="uid://52x1mvksb50c" path="res://Scene/object.tscn" id="4_gea2f"]
[ext_resource type="PackedScene" uid="uid://cafmsu4vdnnfq" path="res://Scene/door.tscn" id="5_icox0"]
[ext_resource type="PackedScene" uid="uid://b0k3gal2wpctt" path="res://fade_transition.tscn" id="6_r0qy7"]

[node name="entrance" type="Node2D"]
script = ExtResource("1_xuywx")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(18, 10.2)
texture = ExtResource("2_b1pgh")
centered = false

[node name="Player" parent="." instance=ExtResource("3_vobsi")]
position = Vector2(443, 377)

[node name="Object" parent="." instance=ExtResource("4_gea2f")]
position = Vector2(788, 309)

[node name="HallwayA Door" parent="." instance=ExtResource("5_icox0")]
position = Vector2(534, 32)
door_name = &"hallwayA_1"

[node name="Kitchen Door" parent="." instance=ExtResource("5_icox0")]
position = Vector2(32, 314)
door_name = &"kitchen"

[node name="Living Room Door" parent="." instance=ExtResource("5_icox0")]
position = Vector2(1120, 312)
door_name = &"living room"

[node name="Fade_Transition" parent="." instance=ExtResource("6_r0qy7")]

[connection signal="entrance_pos_1" from="." to="Player" method="_on_entrance_entrance_pos_1"]
[connection signal="entrance_pos_2" from="." to="Player" method="_on_entrance_entrance_pos_2"]
[connection signal="entrance_pos_3" from="." to="Player" method="_on_entrance_entrance_pos_3"]
[connection signal="pick_up_object" from="Object" to="Player" method="_on_object_pick_up_object"]
